<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.raveria.myapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="textPersonName"
                android:hint="income"
                android:background="@drawable/edit_text_bottom_border"
                android:ems="10"
                android:id="@+id/etIncome"
                android:singleLine="false" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="textPersonName"
                android:hint="outcome"
                android:background="@drawable/edit_text_bottom_border"
                android:ems="10"
                android:id="@+id/etOutcome"
                android:singleLine="false" />

            <TextView
                android:hint="Balance"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:id="@+id/tvBalance" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/numberArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:fabSize="mini"
                app:srcCompat="@mipmap/ic_gear"
                android:id="@+id/floatingActionButton"
                app:backgroundTint="@color/iconColor"
                app:elevation="0dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/kp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn1"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/kp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn2"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/kp3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn3"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/kp4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn4"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/kp5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn5"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/kp6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn6"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/kp7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn7"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/kp8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn8"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/kp9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn9"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:text="@string/kpc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnClear"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/kp0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn0"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/kpdel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnDelete"
                    android:layout_weight="1" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
